# tt-forge

./: pyproject.toml  requirements.txt  tt-forge-arm-mac-execution-log.md  tt-forge-x86-execution-log.md
forge.egg-info/: PKG-INFO  SOURCES.txt
