[project]
name = "forge"
version = "0.1.0"
description = "AI/ML framework for Tenstorrent devices"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Tenstorrent", email = "info@tenstorrent.com" }
]
requires-python = ">=3.8"
keywords = ["forge", "machine learning", "tenstorrent"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.setuptools.dynamic]
version = {file = ".version"}
